Bug 493017 - The label font changes automatically to another value (scales up)
Summary: The label font changes automatically to another value (scales up)
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-12 10:15 UTC by swiderski.kth
Modified: 2024-10-04 07:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.12
Sentry Crash Report:


Attachments
Screen recording showing the error (82 bytes, text/plain)
2024-09-29 09:41 UTC, swiderski.kth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swiderski.kth 2024-09-12 10:15:50 UTC
SUMMARY
The label font size changes automatically by scaling-up the set-value.

STEPS TO REPRODUCE
1. Add a label to a graph.
2. Change label font to any, and size to any (in example, Times New Roman, 8pt).
3. Click another part of the graph to change toolbar context, then click back on the label, and see that the label font forced size to another one.

OBSERVED RESULT
The label font forces back to size 28. It seems like it is scaled by a factor of 28/8, e.g. one can set font size to 2.3pt to get final size of 8pt, however this still does not render correctly in pdf.

EXPECTED RESULT
The label font stays at size 8 as set in GUI.

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Mint 22
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
-
Comment 1 Alexander Semke 2024-09-28 10:12:26 UTC
(In reply to swiderski.kth from comment #0)
> SUMMARY
> The label font size changes automatically by scaling-up the set-value.
> 
> STEPS TO REPRODUCE
> 1. Add a label to a graph.
> 2. Change label font to any, and size to any (in example, Times New Roman,
> 8pt).
> 3. Click another part of the graph to change toolbar context, then click
> back on the label, and see that the label font forced size to another one.
> 
> OBSERVED RESULT
> The label font forces back to size 28. It seems like it is scaled by a
> factor of 28/8, e.g. one can set font size to 2.3pt to get final size of
> 8pt, however this still does not render correctly in pdf.

We cannot reproduce this problem. Can you please add a short screen recording showing this problem?
Comment 2 swiderski.kth 2024-09-29 09:41:02 UTC
Created attachment 174198 [details]
Screen recording showing the error
Comment 3 Alexander Semke 2024-10-04 07:09:42 UTC
Git commit 414d9de078d4e2285535c614707fb75222e7197e by Alexander Semke.
Committed on 04/10/2024 at 07:09.
Pushed by asemke into branch 'master'.

Fixed wrong font size in the plot legend.
FIXED-IN: 2.12

M  +1    -0    ChangeLog
M  +1    -1    src/kdefrontend/dockwidgets/CartesianPlotLegendDock.cpp

https://invent.kde.org/education/labplot/-/commit/414d9de078d4e2285535c614707fb75222e7197e
Comment 4 Alexander Semke 2024-10-04 07:11:08 UTC
(In reply to swiderski.kth from comment #2)
> Created attachment 174198 [details]
> Screen recording showing the error
Thank you for reporting this problem! The fix will be part of the next release and also available in the next nightly build.