Fixed wrong font size in the plot legend.

BUG: 493017
FIXED-IN: 2.12